<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="produto"
            type="com.leandro.omieteste.domain.model.Produto" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtNomeProdutoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produto"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textAppearance="@style/bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNomeProduto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{produto.nomeProduto}"
            android:textAppearance="@style/regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtNomeProdutoLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Bola quadrada de 10 lados" />



        <TextView
            android:id="@+id/txtValorUnitarioLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_unitario"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textAppearance="@style/bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNomeProduto" />

        <TextView
            android:id="@+id/txtValorUnitario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:text="@{produto.formatValorUnitario()}"
            android:textAppearance="@style/regular"
            app:layout_constraintBottom_toBottomOf="@+id/txtValorUnitarioLabel"
            app:layout_constraintStart_toEndOf="@+id/txtValorUnitarioLabel"
            app:layout_constraintTop_toTopOf="@+id/txtValorUnitarioLabel"
            tools:text="R$ 19,99" />

        <TextView
            android:id="@+id/txtQuantidadeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantidade"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textAppearance="@style/bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtValorUnitario" />

        <TextView
            android:id="@+id/txtQuantidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{produto.showQuantidade()}"
            android:textAppearance="@style/regular"
            android:layout_marginStart="@dimen/margin_8dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtQuantidadeLabel"
            app:layout_constraintStart_toEndOf="@+id/txtQuantidadeLabel"
            app:layout_constraintTop_toTopOf="@+id/txtQuantidadeLabel"
            tools:text="10" />

        <TextView
            android:id="@+id/txtValorTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:text="@string/valor_total_produto"
            android:textAppearance="@style/bold"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtQuantidadeLabel"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtValorTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:text="@{produto.formatValorTotal()}"
            android:textAppearance="@style/regular"
            app:layout_constraintBottom_toBottomOf="@+id/txtValorTotalLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtValorTotalLabel"
            app:layout_constraintTop_toTopOf="@+id/txtValorTotalLabel"
            tools:text="R$ 199,90" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/app_divider"
            android:layout_height="1dp" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>