<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="pedido"
            type="com.leandro.omieteste.domain.model.Pedido" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.OmieTeste.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:text="@string/app_name"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abl_toolbar"
            tools:visibility="visible">

            <TextView
                android:id="@+id/txtPedidoIDLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/pedido"
                android:textAppearance="@style/bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtPedidoID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:text="@{pedido.formatarID()}"
                android:textAppearance="@style/regular"
                app:layout_constraintStart_toEndOf="@+id/txtPedidoIDLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0003" />

            <TextView
                android:id="@+id/txtDataPedidoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_pedido"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textAppearance="@style/bold"
                app:layout_constraintStart_toEndOf="@id/txtPedidoID"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDataPedido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:text="@{pedido.formatarData()}"
                android:textAppearance="@style/regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtDataPedidoLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="22/02/2025" />
            <TextView
                android:id="@+id/txtClienteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textAppearance="@style/bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDataPedido" />

            <TextView
                android:id="@+id/txtCliente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:text="@{pedido.nomeCliente}"
                android:textAppearance="@style/regular"
                app:layout_constraintBottom_toBottomOf="@+id/txtClienteLabel"
                app:layout_constraintStart_toEndOf="@+id/txtClienteLabel"
                app:layout_constraintTop_toTopOf="@+id/txtClienteLabel"
                tools:text="Ayrton Senna da Silva" />

            <TextView
                android:id="@+id/txtValorTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/valor_total"
                android:textAppearance="@style/bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCliente"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtValorTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:text="@{pedido.formatarValor()}"
                android:textAppearance="@style/regular"
                app:layout_constraintBottom_toBottomOf="@+id/txtValorTotalLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtValorTotalLabel"
                app:layout_constraintTop_toTopOf="@+id/txtValorTotalLabel"
                tools:text="R$ 199,90" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/app_divider"
                app:layout_constraintTop_toBottomOf="@id/txtValorTotalLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_16dp" />

            <TextView
                android:id="@+id/txtProdutos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/produtos"
                android:textAppearance="@style/bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProdutos"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_16dp"
                tools:itemCount="3"
                tools:listitem="@layout/item_adicionar_produto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtProdutos" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>