<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="pedidoQuant"
            type="com.leandro.omieteste.domain.model.PedidoQuantidadeProdutos" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtPedidoIDLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pedido"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textAppearance="@style/bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPedidoID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:text="@{pedidoQuant.pedido.formatarID()}"
            android:textAppearance="@style/regular"
            app:layout_constraintStart_toEndOf="@+id/txtPedidoIDLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0001" />

        <TextView
            android:id="@+id/txtDataPedidoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_pedido"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textAppearance="@style/bold"
            app:layout_constraintStart_toEndOf="@id/txtPedidoID"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDataPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:text="@{pedidoQuant.pedido.formatarData()}"
            android:textAppearance="@style/regular"
            app:layout_constraintEnd_toStartOf="@+id/imgTrash"
            app:layout_constraintStart_toEndOf="@+id/txtDataPedidoLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22/02/2025" />

        <ImageView
            android:id="@+id/imgTrash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_delete_24" />

        <TextView
            android:id="@+id/txtClienteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textAppearance="@style/bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDataPedido" />

        <TextView
            android:id="@+id/txtCliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:text="@{pedidoQuant.pedido.nomeCliente}"
            android:textAppearance="@style/regular"
            app:layout_constraintBottom_toBottomOf="@+id/txtClienteLabel"
            app:layout_constraintStart_toEndOf="@+id/txtClienteLabel"
            app:layout_constraintTop_toTopOf="@+id/txtClienteLabel"
            tools:text="Ayrton Senna da Silva" />

        <TextView
            android:id="@+id/txtQuantidadeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantidade_itens"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textAppearance="@style/bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCliente" />

        <TextView
            android:id="@+id/txtQuantidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{pedidoQuant.showQuantidade()}"
            android:textAppearance="@style/regular"
            android:layout_marginStart="@dimen/margin_8dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtQuantidadeLabel"
            app:layout_constraintStart_toEndOf="@+id/txtQuantidadeLabel"
            app:layout_constraintTop_toTopOf="@+id/txtQuantidadeLabel"
            tools:text="10" />

        <TextView
            android:id="@+id/txtValorTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:text="@string/valor_total"
            android:textAppearance="@style/bold"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtQuantidadeLabel"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtValorTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:text="@{pedidoQuant.pedido.formatarValor()}"
            android:textAppearance="@style/regular"
            app:layout_constraintBottom_toBottomOf="@+id/txtValorTotalLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtValorTotalLabel"
            app:layout_constraintTop_toTopOf="@+id/txtValorTotalLabel"
            tools:text="R$ 199,90" />

        <ImageView
            android:id="@+id/imgSeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/app_divider"
            android:layout_height="1dp" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>